Trying 3 for emails on server.